// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`send Comment button: 1 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#2c3e50",
      "flex": 1,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#fff",
        "fontWeight": "700",
        "textAlign": "center",
      }
    }
  >
    Welcome to About Screen native!
  </Text>
  <Text
    style={
      Object {
        "color": "#fff",
        "fontWeight": "700",
        "textAlign": "center",
      }
    }
  >
    To get started, edit App.tsx
  </Text>
</View>
`;

exports[`send Comment button: 2 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#2c3e50",
      "flex": 1,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#fff",
        "fontWeight": "700",
        "textAlign": "center",
      }
    }
  >
    Welcome to About Screen native!
  </Text>
  <Text
    style={
      Object {
        "color": "#fff",
        "fontWeight": "700",
        "textAlign": "center",
      }
    }
  >
    To get started, edit App.tsx
  </Text>
</View>
`;

exports[`should display AboutAppScreen with no errors 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#2c3e50",
      "flex": 1,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#fff",
        "fontWeight": "700",
        "textAlign": "center",
      }
    }
  >
    Welcome to About Screen native!
  </Text>
  <Text
    style={
      Object {
        "color": "#fff",
        "fontWeight": "700",
        "textAlign": "center",
      }
    }
  >
    To get started, edit App.tsx
  </Text>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#2980b6",
        "margin": 10,
        "opacity": 1,
        "paddingVertical": 15,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#fff",
          "fontWeight": "700",
          "textAlign": "center",
        }
      }
    >
      Send a Comment
    </Text>
  </View>
</View>
`;

exports[`showCommentField: 1 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#2c3e50",
      "flex": 1,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#fff",
        "fontWeight": "700",
        "textAlign": "center",
      }
    }
  >
    Welcome to About Screen native!
  </Text>
  <Text
    style={
      Object {
        "color": "#fff",
        "fontWeight": "700",
        "textAlign": "center",
      }
    }
  >
    To get started, edit App.tsx
  </Text>
  <LHCButton
    onSelected={[Function]}
  >
    <Text
      style={
        Object {
          "color": "#fff",
          "fontWeight": "700",
          "textAlign": "center",
        }
      }
    >
      Send a Comment
    </Text>
  </LHCButton>
</View>
`;

exports[`showCommentField: 2 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#2c3e50",
      "flex": 1,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#fff",
        "fontWeight": "700",
        "textAlign": "center",
      }
    }
  >
    Welcome to About Screen native!
  </Text>
  <Text
    style={
      Object {
        "color": "#fff",
        "fontWeight": "700",
        "textAlign": "center",
      }
    }
  >
    To get started, edit App.tsx
  </Text>
  <View>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      keyboardType="default"
      onChangeText={[Function]}
      onSubmitEditing={[Function]}
      placeholder="Comment"
      placeholderTextColor="rgba(225,225,225,0.7)"
      rejectResponderTermination={true}
      returnKeyType="done"
      style={
        Object {
          "backgroundColor": "rgba(225,225,225,0.2)",
          "color": "#fff",
          "height": 40,
          "marginBottom": 10,
          "padding": 10,
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <LHCButton
      onSelected={[Function]}
    >
      <Text
        style={
          Object {
            "color": "#fff",
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        Send Comment!
      </Text>
    </LHCButton>
  </View>
</View>
`;
